--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -15,18 +15,22 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     <label for="productName" class="form-label">Product Name:</label>
+                    <div th:if="${#fields.hasErrors('name')}" class="text-danger" th:errors="*{name}"></div>
                     <input type="text" id="productName" class="form-control" th:field="*{name}" />
                 </div>
                 <div class="mb-3">
                     <label for="brand" class="form-label">Brand:</label>
+                    <div th:if="${#fields.hasErrors('brand')}" class="text-danger" th:errors="*{brand}"></div>
                     <input type="text" id="brand" class="form-control" th:field="*{brand}" />
                 </div>
                 <div class="mb-3">
                     <label for="madeIn" class="form-label">Made In:</label>
+                    <div th:if="${#fields.hasErrors('madeIn')}" class="text-danger" th:errors="*{madeIn}"></div>
                     <input type="text" id="madeIn" class="form-control" th:field="*{madeIn}" />
                 </div>
                 <div class="mb-3">
                     <label for="price" class="form-label">Price:</label>
+                    <div th:if="${#fields.hasErrors('price')}" class="text-danger" th:errors="*{price}"></div>
                     <input type="text" id="price" class="form-control" th:field="*{price}" />
                 </div>
                 <div class="text-center">
